@@ -35,9 +35,10 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.inject.Singleton;
+import jakarta.inject.Singleton;
 import org.jooq.DSLContext;
 import org.jooq.Record1;
+import org.jooq.impl.DAOImpl;
 
 @Singleton
 public class NewsFisholaDao extends AbstractFisholaDao {
@@ -45,18 +46,18 @@ public class NewsFisholaDao extends AbstractFisholaDao {
     public static final UUID TEMPORARY_NEWS_ID = UUID.randomUUID();
 
     public List<News> getNews(boolean onlyListPublishedNews) {
-        List<News> allNews = withDao(NewsDao.class, dao -> dao.findAll());
+        List<News> allNews = withDao(NewsDao.class, DAOImpl::findAll);
         if (onlyListPublishedNews) {
             LocalDateTime now = LocalDateTime.now();
             allNews = allNews.stream().filter(
                     news ->
                             news.getDatePublicationDebut() != null && now.isAfter(news.getDatePublicationDebut()) &&
                             news.getDatePublicationFin() != null && now.isBefore(news.getDatePublicationFin())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         allNews = allNews.stream().sorted(
                 (n1, n2) -> -1 * n1.getDatePublicationDebut().compareTo(n2.getDatePublicationDebut())
-        ).collect(Collectors.toList());
+        ).toList();
         return allNews;
     }
 
@@ -74,9 +75,9 @@ public class NewsFisholaDao extends AbstractFisholaDao {
 
     public News insert(News news) {
         DSLContext context = newContext();
-        NewsRecord record = context.newRecord(Tables.NEWS, news);
+        NewsRecord newRecord = context.newRecord(Tables.NEWS, news);
         News inserted = context.insertInto(Tables.NEWS)
-                .set(record)
+                .set(newRecord)
                 .returningResult(Tables.NEWS.ID)
                 .fetchOne()
                 .into(News.class);
@@ -89,7 +90,7 @@ public class NewsFisholaDao extends AbstractFisholaDao {
         newsPicture.setIsMiniature(isMiniature);
         // Step 1: convert content to JPEG base 64 string
         String[] contentSplitted = content.split(",");
-        String base64Image = contentSplitted[1].replaceAll("\"", "");
+        String base64Image = contentSplitted[1].replace("\"", "");
         byte[] jpegBytes = ImageHelper.base64ImageToJpegBytes(base64Image, config.rawImageQuality());
         newsPicture.setContent(jpegBytes);
 
@@ -135,8 +136,10 @@ public class NewsFisholaDao extends AbstractFisholaDao {
             .where(Tables.NEWS_PICTURE.NEWS_ID.eq(TEMPORARY_NEWS_ID))
             .execute();
 
-        List<Record1<UUID>> miniature = dslContext.select(Tables.NEWS_PICTURE.ID).from(Tables.NEWS_PICTURE).where(Tables.NEWS_PICTURE.NEWS_ID.eq(newsId).and(Tables.NEWS_PICTURE.IS_MINIATURE.eq(true))).fetch().collect(Collectors.toList());
-        if (miniature.size() > 0) {
+        List<Record1<UUID>> miniature = dslContext.select(Tables.NEWS_PICTURE.ID)
+                .from(Tables.NEWS_PICTURE).where(Tables.NEWS_PICTURE.NEWS_ID.eq(newsId).and(Tables.NEWS_PICTURE.IS_MINIATURE
+                .eq(true))).fetch().collect(Collectors.toList());
+        if (!miniature.isEmpty()) {
             News news = findById(newsId);
             if (news != null) {
                 news.setMiniatureId(miniature.get(0).component1());
@@ -156,7 +159,7 @@ public class NewsFisholaDao extends AbstractFisholaDao {
     }
 
     public NextScheduledCourrielNotificationCheck getNextScheduledNotificationCheck() {
-        List<NextScheduledCourrielNotificationCheck> nextScheduledCourrielNotificationCheckDates = withDao(NextScheduledCourrielNotificationCheckDao.class, dao -> dao.findAll());
+        List<NextScheduledCourrielNotificationCheck> nextScheduledCourrielNotificationCheckDates = withDao(NextScheduledCourrielNotificationCheckDao.class, DAOImpl::findAll);
         if (nextScheduledCourrielNotificationCheckDates.isEmpty()) {
             // If no date defined, schedule for tomorrow at 7h30
             LocalDateTime nextSchedule = LocalDateTime.now();
